Melhoria na documentação da api
