# storage/swagger/swagger.json
@@ -26,7 +26,7 @@
                     }
                 },
                 "tags": [
-                    "v1"
+                    "Autentica\u00e7\u00e3o"
                 ]
             }
         },
@@ -44,7 +44,7 @@
                     }
                 },
                 "tags": [
-                    "v1"
+                    "Autentica\u00e7\u00e3o"
                 ]
             }
         },
@@ -61,13 +61,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Autentica\u00e7\u00e3o"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -84,13 +84,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Autentica\u00e7\u00e3o"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -107,13 +107,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Transa\u00e7\u00e3o"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "post": {
@@ -128,6 +128,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Transa\u00e7\u00e3o"
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -166,9 +169,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -185,6 +185,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Transa\u00e7\u00e3o"
+                ],
                 "parameters": [
                     {
                         "name": "transaction",
@@ -200,9 +203,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "put": {
@@ -217,6 +217,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Transa\u00e7\u00e3o"
+                ],
                 "parameters": [
                     {
                         "name": "transaction",
@@ -249,9 +252,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "patch": {
@@ -266,6 +266,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Transa\u00e7\u00e3o"
+                ],
                 "parameters": [
                     {
                         "name": "transaction",
@@ -298,9 +301,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -317,13 +317,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Conta"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "post": {
@@ -338,6 +338,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Conta"
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -360,9 +363,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -379,6 +379,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Conta"
+                ],
                 "parameters": [
                     {
                         "name": "account",
@@ -394,9 +397,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -413,13 +413,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "post": {
@@ -434,6 +434,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -477,9 +480,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -496,6 +496,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "parameters": [
                     {
                         "name": "fee",
@@ -511,9 +514,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "put": {
@@ -528,6 +528,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "parameters": [
                     {
                         "name": "fee",
@@ -562,9 +565,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "patch": {
@@ -579,6 +579,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "parameters": [
                     {
                         "name": "fee",
@@ -613,9 +616,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "delete": {
@@ -630,6 +630,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Taxa"
+                ],
                 "parameters": [
                     {
                         "name": "fee",
@@ -645,9 +648,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -664,13 +664,13 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Subledger"
+                ],
                 "security": [
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         },
@@ -687,6 +687,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Subledger"
+                ],
                 "parameters": [
                     {
                         "name": "subledger",
@@ -702,9 +705,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "put": {
@@ -719,6 +719,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Subledger"
+                ],
                 "parameters": [
                     {
                         "name": "subledger",
@@ -749,9 +752,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             },
             "patch": {
@@ -766,6 +766,9 @@
                         "description": "(Unauthorized) Invalid or missing Access Token"
                     }
                 },
+                "tags": [
+                    "Subledger"
+                ],
                 "parameters": [
                     {
                         "name": "subledger",
@@ -796,9 +799,6 @@
                     {
                         "bearerAuth": []
                     }
-                ],
-                "tags": [
-                    "v1"
                 ]
             }
         }
@@ -819,7 +819,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 4653801558005550800
+                        "example": 1048754730800631064
                     },
                     "number": {
                         "name": "number",
@@ -831,7 +831,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 7814935001225092351
+                        "example": 1151757488505758719
                     },
                     "balance": {
                         "name": "balance",
@@ -843,7 +843,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 1542502909620059728
+                        "example": 4638368458743051223
                     },
                     "credit_limit": {
                         "name": "credit_limit",
@@ -855,7 +855,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 5026916366845464554
+                        "example": 4480227197596439938
                     },
                     "user_id": {
                         "name": "user_id",
@@ -867,7 +867,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 7164527738168604287
+                        "example": 3150583114191728480
                     },
                     "deleted_at": {
                         "name": "deleted_at",
@@ -949,7 +949,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 7033619181703136465
+                        "example": 7146313315401725527
                     },
                     "name": {
                         "name": "name",
@@ -995,7 +995,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 5326180444400687356
+                        "example": 2381742443570653612
                     },
                     "transaction_type_id": {
                         "name": "transaction_type_id",
@@ -1007,7 +1007,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 6535290685918785502
+                        "example": 1533711813415751068
                     },
                     "created_at": {
                         "name": "created_at",
@@ -1057,7 +1057,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 7228707672278764048
+                        "example": 6960550360691308098
                     },
                     "name": {
                         "name": "name",
@@ -1130,7 +1130,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 3833079808104207614
+                        "example": 5314318768637374944
                     },
                     "name": {
                         "name": "name",
@@ -1165,7 +1165,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 5956620855996713498
+                        "example": 8446852821101083798
                     },
                     "ledger_id": {
                         "name": "ledger_id",
@@ -1177,7 +1177,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 2466351579137888408
+                        "example": 7827430984433375827
                     },
                     "transaction_id": {
                         "name": "transaction_id",
@@ -1189,7 +1189,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 8428790952172195546
+                        "example": 7652574066366316967
                     },
                     "created_at": {
                         "name": "created_at",
@@ -1246,7 +1246,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 2964593476806233604
+                        "example": 9001371437532780983
                     },
                     "description": {
                         "name": "description",
@@ -1304,7 +1304,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 4470725766724166650
+                        "example": 7167570576892985955
                     },
                     "fee": {
                         "name": "fee",
@@ -1316,7 +1316,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 1060746605234787003
+                        "example": 1462378611975608917
                     },
                     "total": {
                         "name": "total",
@@ -1328,7 +1328,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 3112974778344591489
+                        "example": 7756920970652118384
                     },
                     "transaction_type_id": {
                         "name": "transaction_type_id",
@@ -1340,7 +1340,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 3708635535775211886
+                        "example": 2825283272446734052
                     },
                     "account_id": {
                         "name": "account_id",
@@ -1352,7 +1352,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 1802595297242331467
+                        "example": 4704940503795246169
                     },
                     "payee_id": {
                         "name": "payee_id",
@@ -1364,7 +1364,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 7313438129238969712
+                        "example": 8023333606174797140
                     },
                     "created_at": {
                         "name": "created_at",
@@ -1431,7 +1431,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 5004648222722912614
+                        "example": 7187968380753162538
                     },
                     "name": {
                         "name": "name",
@@ -1523,7 +1523,7 @@
                         "auto_increment": true,
                         "comment": null,
                         "generation": null,
-                        "example": 1169283965595226070
+                        "example": 6534701299300778878
                     },
                     "name": {
                         "name": "name",
@@ -1590,7 +1590,7 @@
                         "auto_increment": false,
                         "comment": null,
                         "generation": null,
-                        "example": 2957256415472361417
+                        "example": 3076665531523121620
                     },
                     "profile_photo_path": {
                         "name": "profile_photo_path",
